# AmagiDevAssignment

./: CMakeLists.txt
AmagiDevAssignment/: AmagiDevAssignment.cpp  AmagiDevAssignment.h  CMakeLists.txt  README.txt
